<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="project"
        app:title="@string/setting_act_project_category_title">
        
    <com.takisoft.preferencex.SwitchPreferenceCompat
        app:key="is_override"
        app:title="@string/setting_act_override_title"
        app:summary="@string/setting_act_override_summary"
        app:defaultValue="false"
        />
        <Preference
            app:key="clean"
            app:title="@string/setting_act_clean_cache_title"
            app:summary="@string/setting_act_clean_cache_summary"
        />
        <Preference
            app:key="custom_export_path"
            app:summary="@string/setting_act_export_path_default_value"
            app:title="@string/setting_act_export_path_title"
            />
        <Preference
            app:key="defaulter_export_path"
            app:summary="@string/setting_act_reset_export_path_summary"
            app:title="@string/setting_act_reset_export_path_title"
            />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="llm_settings"
        app:title="@string/setting_act_llm_category_title">
        <EditTextPreference
            app:key="llm_api_host"
            app:title="@string/setting_act_llm_api_host_title"
            app:summary="@string/setting_act_llm_api_host_summary"
            app:defaultValue="https://api.openai.com"
            />
        <EditTextPreference
            app:key="llm_api_key"
            app:title="@string/setting_act_llm_api_key_title"
            app:summary="@string/setting_act_llm_api_key_summary"
            app:defaultValue=""
            />
        <EditTextPreference
            app:key="llm_max_tokens"
            app:title="@string/setting_act_llm_max_tokens_title"
            app:summary="@string/setting_act_llm_max_tokens_summary"
            app:defaultValue="8000"
            android:inputType="number"
            />
        <Preference
            app:key="llm_refresh_models"
            app:title="@string/setting_act_llm_refresh_models_title"
            app:summary="@string/setting_act_llm_refresh_models_summary"
            />
        <ListPreference
            app:key="llm_model"
            app:title="@string/setting_act_llm_model_title"
            app:summary="@string/setting_act_llm_model_summary"
            android:entries="@array/llm_model_entries"
            android:entryValues="@array/llm_model_values"
            />
        <EditTextPreference
            app:key="custom_llm_model_id"
            app:title="@string/setting_act_llm_custom_model_title"
            app:summary="@string/setting_act_llm_customize_model_summary"
        />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="development"
        app:title="@string/setting_act_category_develop_title">
        <Preference
            app:key="joinGroup"
            app:title="@string/setting_act_join_group_title"
            app:summary="@string/setting_act_join_group_summary"
            />
        <Preference
            app:key="about_development"
            app:title="@string/setting_act_about_development_title"

            app:summary="@string/setting_act_about_development_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>



